<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mealImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="170dp"
            android:minHeight="170dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mealName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_meal_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mealImage"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/mealDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sf_ui_medium"
            android:text="@string/sample_meal_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mealImage"
            app:layout_constraintTop_toBottomOf="@+id/mealName" />

        <TextView
            android:id="@+id/mealPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_meal_price"
            android:layout_margin="16dp"
            android:background="@drawable/price_view_rectangle"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>